Remove iOS app feature animations on mobile and centre the iPhone. Fixes #212.

--- a/css/less/media-queries.less
+++ b/css/less/media-queries.less
@@ -541,8 +541,13 @@
 		margin-right: 0;
 	}
 
-	.featureset.feature-ios .iphone {
-		margin-left: -30px;
+	.featureset.feature-ios .left div,
+	.featureset.feature-ios .right div {
+		-webkit-animation-name: none;
+		-moz-animation-name: none;
+		-ms-animation-name: none;
+		-o-animation-name: none;
+		animation-name: none;
 	}
 
 	#extensions-intro-box {
